# voxworld

./: .gitignore  CMakeLists.txt  README.md
include/: block.h  camera.h  chunk.h  glError.h  physics.h  player.h  rendering.h  shader.h  texture.h  threading.h  vec3.h  voxwrld.h
include/chunk/: chunkData.h  chunkMesh.h
include/structures/: oak_tree.h  structure.h
include/world/: chunkData.h  chunkMesh.h  chunkPos.h  mesh.h  world.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glew/: CMakeLists.txt
res/shaders/: Basic.shader  Blue.shader  UniformTest.shader  Yellow.shader
res/textures/: atlas-new.xcf  texture-atlas.xcf
src/: CMakeLists.txt  block.cpp  camera.cpp  chunk.cpp  glError.cpp  main.cpp  physics.cpp  shader.cpp  texture.cpp  threading.cpp  voxwrld.cpp
src/chunk/: chunkData.cpp  chunkMesh.cpp
src/world/: chunkData.cpp  chunkMesh.cpp  threadPool.cpp  world.cpp
